# intpot

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: cookbook.md
examples/: README.md  advanced_api.py  advanced_cli.py  advanced_mcp.py  api_app.py  cli_app.py  mcp_server.py  universal_app.py
examples/conversions/: advanced_api_to_cli.py  advanced_api_to_mcp.py  advanced_cli_to_api.py  advanced_cli_to_mcp.py  advanced_mcp_to_api.py  advanced_mcp_to_cli.py  api_to_cli.py  api_to_mcp.py  cli_to_api.py  cli_to_mcp.py  mcp_to_api.py  mcp_to_cli.py
scripts/: demo.sh
src/intpot/: __init__.py  cli.py  converter.py  runtime.py  runtime_builders.py
src/intpot/commands/: _convert.py  add_skills.py  eject.py  init.py  inspect.py  serve.py  to_api.py  to_cli.py  to_mcp.py
src/intpot/core/: detector.py  discovery.py  models.py  transforms.py
src/intpot/core/generators/: _render.py  api.py  base.py  cli.py  mcp.py
src/intpot/core/inspectors/: _utils.py  api.py  base.py  cli.py  mcp.py
src/intpot/skills/: __init__.py  content.py
src/intpot/templates/: api_app.py.j2  cli_app.py.j2  mcp_server.py.j2
src/intpot/templates/scaffold/api/: main.py
src/intpot/templates/scaffold/cli/: main.py
src/intpot/templates/scaffold/mcp/: server.py
src/intpot/templates/skills/: intpot-cli.md  intpot-python.md
tests/: conftest.py  test_adversarial.py  test_converter.py  test_converter_extended.py  test_detector.py  test_discovery.py  test_roundtrip.py  test_runtime.py  test_runtime_builders.py
tests/test_commands/: test_add_skills.py  test_directory.py  test_eject.py  test_init.py  test_inspect.py  test_serve.py  test_to_api.py  test_to_cli.py  test_to_mcp.py
tests/test_generators/: test_api_generator.py  test_cli_generator.py  test_mcp_generator.py
tests/test_inspectors/: test_api_inspector.py  test_cli_inspector.py  test_mcp_inspector.py
